2006-01-27  Theodore Kilgore  <kilgota@auburn.edu>

	* camlibs/clicksmart310/*: Supports Logitech Clicksmart 310. 
	* configure.in: camlibs/clicksmart310 hooked up.
	* AUTHORS: author of camlibs/clicksmart310 added.
	* MAINTAINERS: maintainer of camlibs/clicksmart310 added. 

2006-01-04  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: bump the .so version

2005-12-26  Hubert Figuiere  <hub@figuiere.net>

	* CHANGES: updated for 2.1.99

2005-12-25  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: Version 2.1.99 (pre-release)

2005-12-06  Theodore Kilgore  <kilgota@auburn.edu>

	* camlibs/digigr8/*: New camera library for 0x2770:0x905c cameras. 
	* configure.in: camlibs/digigr8 hooked up.
	* AUTHORS: author of camlibs/digigr8 added.
	* MAINTAINERS: maintainer of camlibs/digigr8 added. 


2005-08-31  Hubert Figuiere  <hfiguiere@teaser.fr>

	* bindings/csharp: C# binding from f-spot 0.1.1

2005-08-30  Hubert Figuiere  <hfiguiere@teaser.fr>

	* bindings/java: Java bindings from patch# 1108091
        http://sf.net/tracker/?func=detail&aid=1108091&group_id=8874&atid=308874
	* bindings/python: Python binding from patch# 1152835
	http://sf.net/tracker/?func=detail&aid=1152835&group_id=8874&atid=308874
	
2005-08-25  Marcus Meissner  <marcus@jet.franken.de>
	
	* libgphoto2/gphoto2-filesys.c

	  Got rid of most LRU heuristics, simplified to just store
	  the last <n> full datastreams.
	  This should be fully sufficient for 99.9% of all usecases
	  (download images lineary).

	  You can control this by the setting "libgphoto2" , "cached-images".

2005-08-14  Marcus Meissner  <marcus@jet.franken.de>
	
	* camlibs/directory.c, libgphoto2_port/disk, 
	  libgphoto2/gphoto2-abilities-list.c:
	
	Added support for mounted digitalcameras (USB
	mass storage based).

	Port type is:
		disk:/full/path/
	Camera driver is:
		"Directory Browse"

2005-06-27  Hubert Figuiere  <hfiguiere@teaser.fr>

	* po/ru.po: Update ru.po

2005-06-11  Hans Ulrich Niedermann <gp@n-dimensional.de>
